<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Security Cam</string>
    <string name="headline">SECURITY CAM</string>
    <string name="sub_headline">A Rasperry Pi Use Case</string>
    <string name="button_description">Detection Toggle</string>
    <string name="menu_settings">Settings</string>
    <string name="button_start_detection">START</string>
    <string name="button_stop_detection">STOP</string>
    <string name="configuration_hint">Full configuration is required. Press back to return afterwards.</string>
    <string name="snapshot_description">Latest Snapshot</string>
    <string name="pref_host">Host</string>
    <string name="pref_port">Port</string>
    <string name="pref_user">User</string>
    <string name="pref_password">Password</string>
    <string name="pref_gcm_sender_id">GCM Sender ID</string>
    <string name="instructions">Please make sure you have the backend software installed.
        This application will not work without a running backend. The Android application
        will serve as the remote control. In the next step you will be asked to configure
        the details. </string>
    <string name="title_activity_launcher">Security Cam</string>

</resources>