<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:key="pref_host"
        android:defaultValue=""
        android:title="@string/pref_host" />
    
    <EditTextPreference
        android:key="pref_port"
        android:numeric="integer"
        android:defaultValue=""
        android:title="@string/pref_port" />
    
    <EditTextPreference 
        android:key="pref_user"
        android:defaultValue=""
        android:title="@string/pref_user"/>
    
    <EditTextPreference 
        android:key="pref_password"
        android:defaultValue=""
        android:title="@string/pref_password"/>
    
    <EditTextPreference 
        android:key="pref_gcm_sender_id"
        android:numeric="integer"
        android:defaultValue=""
        android:title="@string/pref_gcm_sender_id"/>
    
</PreferenceScreen>