<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/headline"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="6"
        android:text="@string/headline"
        android:textColor="#FFFFFF"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headline"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="6"
        android:text="@string/sub_headline"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

    <RelativeLayout
        android:id="@+id/snapshot_area"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/subtitle"
        android:layout_marginTop="70dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/snapshot"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/snapshot_description"
            android:onClick="refreshSnapshot" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="invisible" />
    </RelativeLayout>

    <TextView
        android:id="@+id/errors"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/snapshot_area"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textSize="12sp" />

    <Button
        android:id="@+id/detection_toggle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/errors"
        android:layout_marginTop="5dp"
        android:onClick="toggleMotionDetection"
        android:text="@string/button_start_detection" />

</RelativeLayout>